--- a/www/kerbit/imports/ui/pages/login.html
+++ b/www/kerbit/imports/ui/pages/login.html
@@ -2,7 +2,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="vcenter text-center col-md-6 col-md-offset-3">
+            <div class="text-center col-md-6 col-md-offset-3">
                 {{> atForm state = 'signIn'}}
             </div>
         </div>
