--- a/www/kerbit/imports/ui/pages/clientHistory.html
+++ b/www/kerbit/imports/ui/pages/clientHistory.html
@@ -5,54 +5,62 @@
 </template>
 
 <template name="ClientHistoryHelper">
-  <h3> You have {{getPendingCount}} jobs waiting for collection</h3>
-    <table class="table table-hover">
-  <thead>
+
+  <!-- TODO fix else block -->
+  {{#if getIsZero}}
+    <h3>You have no requests pending collection.</h3>
+  {{else}}
+    {{#if getIsOne}}
+      <h3>You have 1 request pending collection.</h3>
+    {{/if}}
+    <h3>You have {{getPendingCount}} requests pending collection.</h3>
+  {{/if}}
+  <table class="table table-hover">
+    <thead>
     <tr>
       <th>Order ID</th>
       <th>Driver</th>
       <th>Location</th>
-      <th>Collected?</th>
+      <th>Collection status</th>
     </tr>
-  </thead>
-  <tbody>
-  {{#each pending}}
-    <tr>
-      <th scope="row">{{_id}}</th>
-      <td><img src="https://randomuser.me/api/portraits/men/8.jpg" style="width:35px;height:30px;">{{getDriverName driverId}}</td>
-      <td>{{formatPostcode postcode}}</td>
-      <td><button class="btn btn-default btn-success collect">Collected</button></td>
-    </tr>
+    </thead>
+    <tbody>
+    {{#each pending}}
+      <tr>
+        <th scope="row">{{_id}}</th>
+        <td><img src="https://randomuser.me/api/portraits/men/8.jpg" style="width:35px;height:30px;">{{getDriverName driverId}}</td>
+        <td>{{formatPostcode postcode}}</td>
+        <td><button class="btn btn-default btn-success collect">Collected</button></td>
+      </tr>
     {{/each}}
 
-  </tbody>
-</table>
+    </tbody>
+  </table>
 
-    <h3> Your last five completed jobs :</h3>
-    <table class="table table-hover">
-        <thead>
-        <tr>
-            <th>Date</th>
-            <th>Order ID</th>
-            <th>Driver</th>
-            <th>Location</th>
-            <th>Feedback</th>
-        </tr>
-        </thead>
-        <tbody>
-        {{#each transactions}}
-        <tr>
-            <th>{{formatDate dateConfirmed}}</th>
-            <th scope="row">{{_id}}</th>
-            <td><img src="https://randomuser.me/api/portraits/men/8.jpg" style="width:35px;height:30px;">{{getDriverName driverId}}</td>
-            <td>{{formatPostcode postcode}}</td>
-            <td>{{> starsRating id='rating' mutable=true}}<button class="btn btn-default ratingButton">Rate this transaction</button></td>
-        </tr>
-        {{/each}}
+  <h3>Your last five completed jobs:</h3>
+  <table class="table table-hover">
+    <thead>
+    <tr>
+      <th>Date</th>
+      <th>Order ID</th>
+      <th>Driver</th>
+      <th>Location</th>
+      <th>Feedback</th>
+    </tr>
+    </thead>
+    <tbody>
+    {{#each transactions}}
+      <tr>
+        <th>{{formatDate dateConfirmed}}</th>
+        <th scope="row">{{_id}}</th>
+        <td><img src="https://randomuser.me/api/portraits/men/8.jpg" style="width:35px;height:30px;">{{getDriverName driverId}}</td>
+        <td>{{formatPostcode postcode}}</td>
+        <td>{{> starsRating id='rating' mutable=true}}<button class="btn btn-default ratingButton">Rate this transaction</button></td>
+      </tr>
+    {{/each}}
 
-        </tbody>
-    </table>
-
+    </tbody>
+  </table>
 
 </template>
 
