User page displays username and feedback score, however routing issue prevents cold loading of user profile  page, this will require further work/discussion

--- a/www/kerbit/imports/ui/pages/clientHistory.html
+++ b/www/kerbit/imports/ui/pages/clientHistory.html
@@ -19,7 +19,8 @@
   {{#each pending}}
     <tr>
       <th scope="row">{{_id}}</th>
-      <td><img src="https://randomuser.me/api/portraits/men/8.jpg" style="width:35px;height:30px;">{{getDriverName driverId}}</td>
+      <td><a href="/users/{{getDriverName driverId}}"> <img src="https://randomuser.me/api/portraits/men/8.jpg" style="width:35px;height:30px;">{{getDriverName driverId}}</a>
+      </td>
       <td>{{formatPostcode postcode}}</td>
       <td><button class="btn btn-default btn-success collect">Collected</button></td>
     </tr>
@@ -44,7 +45,7 @@
         <tr>
             <th>{{formatDate dateConfirmed}}</th>
             <th scope="row">{{_id}}</th>
-            <td><img src="https://randomuser.me/api/portraits/men/8.jpg" style="width:35px;height:30px;">{{getDriverName driverId}}</td>
+            <td><a href="/users/{{getDriverName driverId}}"><img src="https://randomuser.me/api/portraits/men/8.jpg" style="width:35px;height:30px;">{{getDriverName driverId}}</a></td>
             <td>{{formatPostcode postcode}}</td>
             <td>
                 {{#if hasFeedback _id}}
