--- a/www/kerbit/imports/ui/pages/userProfilePublicView.html
+++ b/www/kerbit/imports/ui/pages/userProfilePublicView.html
@@ -1,4 +1,22 @@
 <template name="viewUser">
+{{#if Template.subscriptionsReady}}
+  {{#if currentUser }}
+      {{#if isAUser}}
+
+        {{>viewUserHelper }}
+      {{else}}
+
+          <p>User not found!</p>
+
+      {{/if}}
+  {{else}}
+      <p> You are not authorized to see this page.</p>
+      <p> Please <a href="/">return to Home</a></p>
+  {{/if}}
+  {{/if}}
+</template>
+
+<template name="viewUserHelper">
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-6">
@@ -8,16 +26,12 @@
                             <img src="http://placehold.it/380x500" alt="" class="img-rounded img-responsive" />
                         </div>
                         <div class="col-sm-6 col-md-8">
-                            <h4>
-                                Bhaumik Patel</h4>
-                            <small><cite title="San Francisco, USA">San Francisco, USA <i class="glyphicon glyphicon-map-marker">
-                            </i></cite></small>
+                            <h4>{{getUsername}}</h4>
+                            <small><cite title="Driver / Client">Driver / Client
+                            </cite></small>
                             <p>
-                                <i class="glyphicon glyphicon-envelope"></i>email@example.com
-                                <br />
-                                <i class="glyphicon glyphicon-globe"></i><a href="http://www.jquery2dotnet.com">www.jquery2dotnet.com</a>
-                                <br />
-                                <i class="glyphicon glyphicon-gift"></i>June 02, 1988</p>
+
+                                {{> starsRating rating=getFeedbackScore mutable=false}}</p>
                             
                         </div>
                     </div>
