Start materialize rewrite

--- a/www/kerbit/imports/ui/pages/home.html
+++ b/www/kerbit/imports/ui/pages/home.html
@@ -67,17 +67,10 @@
 
       <hr id="feedback" class="featurette-divider">
 
-      <div class="row featurette">
-        <center>
-          <h2 class="featurette-heading">Help Us Improve With Feedback!</h2>
-          <form>
-            <input type="text" name="feedback" placeholder="Feedback" style="text-align: center">
-            <input type="submit" value="Submit">
-          </form>
-          </center>
-      </div>
-
         <hr class="featurette-divider">
         <!-- /END THE FEATURETTES -->
     </div>
+</template>
+
+<template name="Home">
 </template>
