Work on the redesign

--- a/www/kerbit/imports/ui/pages/home.html
+++ b/www/kerbit/imports/ui/pages/home.html
@@ -1,4 +1,4 @@
-<template name="Home">
+<template name="home">
 
     <!-- {{> map}} -->
     <div id="top"></div>
@@ -72,5 +72,10 @@
     </div>
 </template>
 
-<template name="home">
+<template name="Home">
+  <div id="top"></div>
+
+  </div>
+
+
 </template>
