--- a/www/kerbit/imports/ui/pages/myRequests.html
+++ b/www/kerbit/imports/ui/pages/myRequests.html
@@ -8,7 +8,7 @@
   <div class="text-center h1">My requests
     <div class="btn-group" role="group" aria-label="Basic example">
       <button class="btn btn-success refresh-requests"><i class="fa fa-refresh fa-fw"></i> Refresh</button>
-      <button class="btn btn-danger delete-all-requets"><i class="fa fa-trash fa-fw"></i> Delete all</button>
+      <button id="delete-all-requests" class="btn btn-danger "><i class="fa fa-trash fa-fw"></i> Delete all</button>
     </div>
   </div>
   <hr>
@@ -22,7 +22,7 @@
                 {{#each images imageId}}
                   <div class="container">
                     <div class="col-md-2" style="padding-left: 0px;  padding-right: 0px;">
-                      <a href="{{this.url}}" target="_blank"><img src="{{this.url store='images' uploading='/van.ico' storing='/van.ico'}}" alt="" class="img-rounded img-responsive" /></a>
+                      <a href="{{this.url}}" target="_blank"><img src="{{this.url store='images'}}" alt="" class="img-rounded img-responsive" /></a>
                     </div>
                   </div>
                 {{/each}}
@@ -41,12 +41,12 @@
                 {{#each offers _id}}
                   <ul class="list-group">
                     <li class="list-group-item">
-                      Offer: {{price}} <button class="btn btn-default btn-success accept-offer">Accept Offer</button>
+                      Offer: {{price}} <button id="accept-offer" class="btn btn-default btn-success ">Accept Offer</button>
                     </li>
                   </ul>
                 {{/each}}
               </li>
-              <button type="button" class="list-group-item list-group-item-danger"><i class="fa fa-trash fa-fw"></i> Delete this request</button>
+              <button type="button" id="delete-request" class="list-group-item list-group-item-danger "><i class="fa fa-trash fa-fw"></i> Delete this request</button>
             </ul>
           </li>
         {{/each}}
