Remove postcode from requests and transactions

--- a/www/kerbit/imports/ui/pages/myRequests.html
+++ b/www/kerbit/imports/ui/pages/myRequests.html
@@ -31,10 +31,7 @@
                 <span class="text-info">Description:</span> &nbsp;&nbsp;{{formatDescription description}}
               </li>
               <li class ="list-group-item">
-                <span class="text-info">Date created:</span> {{formatDate dateConfirmed}}
-              </li>
-              <li class ="list-group-item">
-                <span class="text-info">Location:</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{formatPostcode postcode}}
+                <span class="text-info">Date created:</span> {{formatDate createdAt }}
               </li>
               <li class ="list-group-item">
                 <span class="text-info">Offers:</span><br>
