Finish rewrite of home page

--- a/www/kerbit/imports/ui/pages/home.html
+++ b/www/kerbit/imports/ui/pages/home.html
@@ -74,8 +74,111 @@
 
 <template name="Home">
   <div id="top"></div>
+  <div id="index-banner" class="parallax-container">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <br><br>
+        <h1 class="header center white-text">KERB.IT</h1>
+        <div class="row center">
+          <h5 class="header col s12 white-text">Coming soon to London</h5>
+        </div>
+        <div class="row center">
+          <a href="/register" id="get-started" class="btn-large waves-effect
+          waves-light">GET STARTED</a> 
+        </div>
+        <br><br>
 
+      </div>
+    </div>
+    <div class="parallax"><img src="/truck1.jpg"></div>
   </div>
 
+  <div id="services"></div>
+  <div class="container">
+    <div class="section">
 
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+          <h2 class="center"><i class="material-icons">flash_on</i></h2>
+          <h5 class="center">FASTER WASTE DISPOSAL</h5>
+          <p class="light">We did most of the heavy lifting for you to 
+          give a comprehensive list of drivers and the price they would charge
+          you to get rid of your rubbish. All this so that you can achieve your
+          goals faster, more smoothly, and for less money.</p>
+          </div>
+        </div>
+  
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center"><i class="material-icons">group</i></h2>
+            <h5 class="center">USER FOCUSED</h5> 
+            <p class="light">By continuously interacting with people
+            like you, we were able to create a platform that incorporates all the
+            right features for you and your projects. We are still growing and
+            keep adding new features that users suggest us. So keep updated and
+            help us by proving feedback at the bottom of the page.  </p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center"><i class="material-icons">terrain</i></h2>
+            <h5 class="center">ECO-FRIENDLY</h5>
+            <p class="light">We are also aware of the many environmental issues
+            surronding the business of waste disposal in London, and we
+            understand that this is a concern for most of out customers. This is
+            why we aim to reward ecological disposal of waste through our ranking
+            system.</p>
+          </div>
+        </div>
+      </div>
+  
+    </div>
+  </div>
+
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot center-block valign">
+      <div class="row">
+        <h5 class="header col s12 center-align white-text">A platform ready to
+        revolutionise waste disposal</h5>
+      </div>
+    </div>
+    <div class="parallax"><img src="/nature.jpg"></div>
+  </div>
+
+  <div id="about"></div>
+  <div class="container">
+    <div class="section">
+      <br><br>
+
+      <div class="row">
+        <div class="col s8 offset-s2 center">
+          <h4>About Us</h4>
+          <p class="left-align">We are a team of students at Imperial College of
+          London who are currently completing their second year. We created this
+          application as part of our summer term WebApps assignment. We choose
+          this project because we felt that the waste disposal industry really
+          needed modernisation, therefore we felt it would provide us an
+          opportunity to create a product with a lot potential market value.
+          Also we felt that implementing Kerb.It would be a very challenging,
+          yet rewarding and educational experience for us. Apart from being
+          passionate programmers we like to party loads, so if you ever need to
+          contact us, just go to the Imperial College Union or Belushi's in
+          Hammersmith and you are bound to find one of us.</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot center-block valign">
+      <div class="row">
+        <h5 class="header col s12 center-align white-text">A platform ready to
+        revolutionise waste disposal</h5>
+      </div>
+    </div>
+    <div class="parallax"><img src="/vintage-truck.jpg"></div>
+  </div>
 </template>
