--- a/www/kerbit/imports/ui/pages/requestPickup.html
+++ b/www/kerbit/imports/ui/pages/requestPickup.html
@@ -10,6 +10,7 @@
     <div class="row">
       <div class="col-md-6">
         <p class="h1 text-center">Map</p>
+        <input id="pac-input" class="controls" type="text" placeholder="Pick up Location">
         <div id="map-container" class="request-pickup">
           {{> map}}
         </div>
