Fix typo in home page

--- a/www/kerbit/imports/ui/pages/home.html
+++ b/www/kerbit/imports/ui/pages/home.html
@@ -127,7 +127,7 @@
             <h5 class="center">ECO-FRIENDLY</h5>
             <p class="light">We are also aware of the many environmental issues
             surronding the business of waste disposal in London, and we
-            understand that this is a concern for most of out customers. This is
+            understand that this is a concern for most of our customers. This is
             why we aim to reward ecological disposal of waste through our ranking
             system.</p>
           </div>
