--- a/www/kerbit/imports/ui/pages/myRequests.html
+++ b/www/kerbit/imports/ui/pages/myRequests.html
@@ -15,12 +15,12 @@
   <div class="container">
     <div class="row">
       <div class="list-group">
-        {{#each requests}}
+        {{#each currentUsersRequests}}
           <li class="list-group-item">
             <ul class="list-group custom-border">
-              {{#each getItemWithId itemId}}
+              {{#each ItemWithId itemId}}
                 <li class ="list-group-item">
-                  {{#each getImageWithId imageId}}
+                  {{#each ImageWithId imageId}}
                     <div class="container">
                       <div class="col-md-2" style="padding-left: 0px;  padding-right: 0px;">
                         <a href="{{this.url}}" target="_blank"><img src="{{this.url store='images'}}" alt="" class="img-rounded img-responsive" /></a>
@@ -37,7 +37,7 @@
               </li>
               <li class ="list-group-item">
                 <span class="text-info">Offers:</span><br>
-                {{#each offers _id}}
+                {{#each offersWithRequestId _id}}
                   <ul class="list-group">
                     <li class="list-group-item">
                       Offer: {{price}} <button id="accept-offer" class="btn btn-default btn-success ">Accept Offer</button>
