--- a/www/kerbit/imports/ui/pages/makeOffers.html
+++ b/www/kerbit/imports/ui/pages/makeOffers.html
@@ -29,12 +29,14 @@
             <div class="row" style="margin-left: 15px">
               {{#each requests}}
                 <input type="radio" name="requestId" value={{_id}}>
-                Request: {{description}} <br>
-                Created on {{formatDate createdAt}}. <br>
-                {{#each images imageId}}
-                  <div>
-                    <a href="{{this.url}}" target="_blank"><img src="{{this.url store='images' uploading='/van.ico' storing='/van.ico'}}" alt="" class="img-thumbnail" /></a>
-                  </div>
+                {{#each items itemId}}
+                  Request: {{description}} <br>
+                  Created on {{formatDate createdAt}}. <br>
+                  {{#each images imageId}}
+                   <div>
+                      <a href="{{this.url}}" target="_blank"><img src="{{this.url store='images' uploading='/van.ico' storing='/van.ico'}}" alt="" class="img-thumbnail" /></a>
+                    </div>
+                  {{/each}}
                 {{/each}}
               {{/each}}
             </div>
