--- a/www/kerbit/imports/ui/pages/makeOffers.html
+++ b/www/kerbit/imports/ui/pages/makeOffers.html
@@ -31,7 +31,7 @@
                 <input type="radio" name="requestId" value={{_id}}>
                 Request: {{description}} <br>
                 Created on {{formatDate createdAt}}. <br>
-                {{#each images imageId}}
+                {{#each images imageIds}}
                   <div>
                     <a href="{{this.url}}" target="_blank"><img src="{{this.url store='images' uploading='/van.ico' storing='/van.ico'}}" alt="" class="img-thumbnail" /></a>
                   </div>
