--- a/www/kerbit/imports/ui/pages/requestPickup.html
+++ b/www/kerbit/imports/ui/pages/requestPickup.html
@@ -27,7 +27,7 @@
           <div class="form-group">
             <label for="image" class="col-md-2 control-label">Image</label>
             <div class="col-md-10">
-              <input type="file" id="file" accept="images/*">
+              <input type="file" id="file" accept="images/*" multiple>
             </div>
           </div>
           <div class="form-group">
