show current transactions to driver

--- a/www/kerbit/imports/ui/pages/myRequests.html
+++ b/www/kerbit/imports/ui/pages/myRequests.html
@@ -14,8 +14,8 @@
   <hr>
     <div class="tabs">
     <ul class="tab-links">
-      <li class="active" ><button class="btn btn-link" name ="#tab1">Pending Requests</button></li>
-      <li><button class="btn btn-link" name= "#tab2">Accepted Requests</button></li>
+      <li class="active" ><button class="btn" name ="#tab1">Pending Requests</button></li>
+      <li><button class="btn" name= "#tab2">Accepted Requests</button></li>
     </ul>
 
     <div class="tab-content">
