--- a/www/kerbit/imports/ui/pages/myOffers.html
+++ b/www/kerbit/imports/ui/pages/myOffers.html
@@ -6,15 +6,55 @@
 
 <template name="MyOffersHelper">
   <div class="text-center h1"> My Offers </div>
-    <div class="container">
-      <div class="row">
-        {{#each offer in offers}}
-          <li>
-            {{#each request in requests offer.requestId}}
-                Request: {{request.description}} {{offer.price}}
+
+  <hr>
+  <div class="tabs">
+    <ul class="tab-links">
+      <li class="active" ><button class="btn btn-link" name ="#tab1">Pending Offers</button></li>
+      <li><button class="btn btn-link" name= "#tab2">Accepted Offers</button></li>
+    </ul>
+
+    <div class="tab-content">
+      <div id="tab1" class="tab active">
+        <div class="container">
+          <div class="row">
+            {{#each offer in offers}}
+              <li>
+                {{#each request in requests offer.requestId}}
+                  Request: {{request.description}} {{offer.price}}
+                {{/each}}
+              </li>
             {{/each}}
+          </div>
+        </div>
+      </div>
+
+      <div id="tab2" class="tab">
+        {{#each transactions}}
+          <li class="list-group-item">
+            <ul class="list-group custom-border">
+              <li class ="list-group-item">
+                {{#each images imageIds}}
+                  <div class="container">
+                    <div class="col-md-2" style="padding-left: 0px;  padding-right: 0px;">
+                      <a href="{{this.url}}" target="_blank"><img src="{{this.url store='images'}}" alt="" class="img-rounded img-responsive" /></a>
+                    </div>
+                  </div>
+                {{/each}}
+              </li>
+              <li class ="list-group-item">
+                <span class="text-info">Description:</span> &nbsp;&nbsp;{{formatDescription description}}
+              </li>
+              <li class ="list-group-item">
+                <span class="text-info">Date accepted:</span> {{formatDate dateCollected }}
+              </li>
+              <li class ="list-group-item">
+                <span class="text-info">Price:</span> {{price}}<br>
+              </li>
+            </ul>
           </li>
-      {{/each}}
+        {{/each}}
+      </div>
     </div>
   </div>
 </template>
