--- a/www/kerbit/imports/ui/pages/home.html
+++ b/www/kerbit/imports/ui/pages/home.html
@@ -100,12 +100,11 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-          <h2 class="center"><i class="material-icons">flash_on</i></h2>
-          <h5 class="center">FASTER WASTE DISPOSAL</h5>
-          <p class="light">We did most of the heavy lifting for you to 
-          give a comprehensive list of drivers and the price they would charge
-          you to get rid of your rubbish. All this so that you can achieve your
-          goals faster, more smoothly, and for less money.</p>
+            <h2 class="center"><i class="material-icons">flash_on</i></h2>
+            <h5 class="center">FASTER WASTE DISPOSAL</h5>
+            <p class="light">Once you've put in a request, just wait for offers to pile in
+              and pick your favourite company from our comprehensive array of service providers.
+              Get rid of that old sofa faster, smoother and for far less money!</p>
           </div>
         </div>
   
@@ -114,10 +113,9 @@
             <h2 class="center"><i class="material-icons">group</i></h2>
             <h5 class="center">USER FOCUSED</h5> 
             <p class="light">By continuously interacting with people
-            like you, we were able to create a platform that incorporates all the
-            right features for you and your projects. We are still growing and
-            keep adding new features that users suggest us. So keep updated and
-            help us by proving feedback at the bottom of the page.  </p>
+              like you, we were able to create a platform that incorporates all the
+              right features for you and your projects. We're still growing, so make
+              sure to help us improve by providing some feedback at the bottom of the page.</p>
           </div>
         </div>
 
@@ -125,11 +123,9 @@
           <div class="icon-block">
             <h2 class="center"><i class="material-icons">terrain</i></h2>
             <h5 class="center">ECO-FRIENDLY</h5>
-            <p class="light">We are also aware of the many environmental issues
-            surronding the business of waste disposal in London, and we
-            understand that this is a concern for most of our customers. This is
-            why we aim to reward ecological disposal of waste through our ranking
-            system.</p>
+            <p class="light">We understand environmental issues are a concern for most of our customers,
+              so we aim to reward eco-friendly waste disposal practices through our evolving ranking
+              system.</p>
           </div>
         </div>
       </div>
@@ -140,8 +136,8 @@
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot center-block valign">
       <div class="row">
-        <h5 class="header col s12 center-align white-text">A platform ready to
-        revolutionise waste disposal</h5>
+        <h5 class="header col s12 center-align white-text">"Skips all the annoying bits I've had to go through before.
+        Definitely recommending to my friends"</h5>
       </div>
     </div>
     <div class="parallax"><img src="/nature.jpg"></div>
@@ -155,17 +151,15 @@
       <div class="row">
         <div class="col s8 offset-s2 center">
           <h4>About Us</h4>
-          <p class="left-align">We are a team of students at Imperial College of
-          London who are currently completing their second year. We created this
-          application as part of our summer term WebApps assignment. We choose
-          this project because we felt that the waste disposal industry really
-          needed modernisation, therefore we felt it would provide us an
-          opportunity to create a product with a lot potential market value.
-          Also we felt that implementing Kerb.It would be a very challenging,
-          yet rewarding and educational experience for us. Apart from being
-          passionate programmers we like to party loads, so if you ever need to
-          contact us, just go to the Imperial College Union or Belushi's in
-          Hammersmith and you are bound to find one of us.</p>
+          <p class="center-align">We are a team of students at Imperial College London.
+            We're currently in second year, and we made this application as part of our
+            summer term project. We chose this idea because we felt the current
+            waste disposal industry really needed modernisation, which gave us an
+            opportunity to create a product with a lot of potential market value.
+            We also felt implementing Kerb.It would be very challenging, yet rewarding
+            and educational for us. Apart from being passionate programmers we like to party loads,
+            so if you ever need to contact us, just go to Imperial College Union or Belushi's in
+            Hammersmith and you are bound to find one of us.</p>
         </div>
       </div>
 
@@ -175,8 +169,7 @@
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot center-block valign">
       <div class="row">
-        <h5 class="header col s12 center-align white-text">A platform ready to
-        revolutionise waste disposal</h5>
+        <h5 class="header col s12 center-align white-text">"Super-fast service, competitive prices, much better than existing options"</h5>
       </div>
     </div>
     <div class="parallax"><img src="/vintage-truck.jpg"></div>
