--- a/www/kerbit/imports/ui/pages/notFound.html
+++ b/www/kerbit/imports/ui/pages/notFound.html
@@ -1,15 +1,13 @@
 <template name="NotFound">
-    <div class="container">
-        <div class="jumbotron">
-            <h1 class="text-center">404</h1>
-            <h2 class="text-center">Page not found</h2>
-            <hr>
-            <p class="text-center text-muted">It appears the page you're looking for doesn't exist. Don't panic!
-            Click the <i class="fa fa-arrow-left fa-fw"></i> in your browser window to go back to where you were before,
-            or click this nice green button:</p>
-            <div class="text-center">
-                <a href="/" class="btn btn-lg btn-success"><i class="fa fa-home fa-fw"></i> Take me home</a>
-            </div>
-        </div>
+  <div class="container">
+    <h1 class="center-align">404</h1>
+    <h2 class="center-align">Page not found</h2>
+    <hr>
+    <p class="text-center text-muted">It appears the page you're looking for doesn't exist. Don't panic!
+      Click the <i class="fa fa-arrow-left fa-fw"></i> in your browser window to go back to where you were before,
+      or click this nice green button:</p>
+    <div class="center-align">
+      <a href="/" class="btn-large waves-effect waves-light"><i class="fa fa-home fa-fw"></i> Take me home</a>
     </div>
+  </div>
 </template>
