--- a/www/kerbit/imports/ui/pages/myRequests.html
+++ b/www/kerbit/imports/ui/pages/myRequests.html
@@ -20,7 +20,7 @@
             <ul class="list-group custom-border">
               {{#each ItemWithId itemId}}
                 <li class ="list-group-item">
-                  {{#each ImageWithId imageId}}
+                  {{#each ImageWithId imageIds}}
                     <div class="container">
                       <div class="col-md-2" style="padding-left: 0px;  padding-right: 0px;">
                         <a href="{{this.url}}" target="_blank"><img src="{{this.url store='images'}}" alt="" class="img-rounded img-responsive" /></a>
