--- a/www/kerbit/imports/ui/pages/register.html
+++ b/www/kerbit/imports/ui/pages/register.html
@@ -1,11 +1,10 @@
 <template name="register">
-
-    <div class="container">
-        <div class="row">
-            <div class="text-center col-md-6 col-md-offset-3">
-                {{> atForm state = 'signUp'}}
-            </div>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col m6 offset-m3 center-align">
+        {{> atForm state = 'signUp'}}
+      </div>
     </div>
+  </div>
 
 </template>
