--- a/www/kerbit/imports/ui/pages/requestPickup.html
+++ b/www/kerbit/imports/ui/pages/requestPickup.html
@@ -5,56 +5,80 @@
 </template>
 
 <template name="RequestPickupHelper">
-<div class="container">
-  <div class="jumbotron">
-    <div class="row">
-      <div class="col-md-6">
-        <p class="h1 text-center">Map</p>
-        <div id="map-container" class="request-pickup">
-          {{> map}}
-        </div>
-      </div>
-      <div class="col-md-6">
-        <p class="h1 text-center">Address</p>
-        <form class="form-horizontal">
-          <div class="form-group">
-            <label for="description" class="col-md-2 control-label">Description</label>
-            <div class="col-md-10">
-              <textarea class="form-control" id="description" placeholder="Description" rows=10></textarea>
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="image" class="col-md-2 control-label">Image</label>
-            <div class="col-md-10">
-              <input type="file" id="file" accept="images/*">
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="sizeRequired" class="col-md-2 control-label">Size Required</label>
-            <div class="col-md-10">
-              <input type="range" id="sizeRequired" value="6" min="1" max="11">
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="bidWindow" class="col-md-2 control-label">Bid Window</label>
-            <div class="col-md-10">
-              <input type="range" id="bidWindow" value="10140" min="60" max="20160">
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="postcode" class="col-md-2 control-label">Postcode</label>
-            <div class="col-md-10">
-              <input type="text" class="form-control" id="postcode" placeholder="Postcode">
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-              <button type="submit" class="btn btn-default">Submit</button>
-            </div>
-          </div>
-        </form>
+  <div class="row">
+    <div class="col m6">
+      <h1 class="center-align" id="mapSection">Map</h1>
+      <div id="map-container">
+        {{> map}}
       </div>
     </div>
+    <div class="col m6">
+      <h1 class="center-align" id="addressSection">Address</h1>
+      <form>
+        <div class="input-field">
+          <textarea id="description" class="materialize-textarea"></textarea>
+          <label for="description">Description</label>
+        </div>
+        <div class="file-field input-field">
+          <div class="btn">
+            <span>Upload image</span>
+            <input type="file" id="clientImage">
+          </div>
+          <div class="file-path-wrapper">
+            <input class="file-path validate" type="text">
+          </div>
+        </div>
+        <p class="range-field">
+          <input type="range" id="sizeRequired" min="0" max="100" />
+          <label for="sizeRequired">Size required</label>
+        </p>
+        <p class="range-field">
+          <input type="range" id="bidWindow" min="0" max="100" />
+          <label for="bidWindow">Bid window</label>
+        </p>
+      </form>
+    </div>
   </div>
-</div>
 </template>
+
+<!--
+
+      <form class="form-horizontal">
+        <div class="form-group">
+          <label for="description" class="col-md-2 control-label">Description</label>
+          <div class="col-md-10">
+            <textarea class="form-control" id="description" placeholder="Description" rows=10></textarea>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="image" class="col-md-2 control-label">Image</label>
+          <div class="col-md-10">
+            <input type="file" id="file" accept="images/*">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="sizeRequired" class="col-md-2 control-label">Size Required</label>
+          <div class="col-md-10">
+            <input type="range" value="6" min="1" max="11">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="bidWindow" class="col-md-2 control-label">Bid Window</label>
+          <div class="col-md-10">
+            <input type="range" value="10140" min="60" max="20160">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="postcode" class="col-md-2 control-label">Postcode</label>
+          <div class="col-md-10">
+            <input type="text" class="form-control" id="postcode" placeholder="Postcode">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-md-offset-2 col-md-10">
+            <button type="submit" class="btn btn-default">Submit</button>
+          </div>
+        </div>
+      </form>
+
+-->
