--- a/www/kerbit/imports/ui/pages/requestPickup.html
+++ b/www/kerbit/imports/ui/pages/requestPickup.html
@@ -16,26 +16,27 @@
       <h1 class="center-align" id="addressSection">Address</h1>
       <form>
         <div class="input-field">
-          <textarea id="description" class="materialize-textarea"></textarea>
+          <textarea id="description" name="description" class="materialize-textarea"></textarea>
           <label for="description">Description</label>
         </div>
         <div class="file-field input-field">
           <div class="btn">
             <span>Upload image</span>
-            <input type="file" id="clientImage">
+            <input type="file" id="clientImage" name="clientImage">
           </div>
           <div class="file-path-wrapper">
             <input class="file-path validate" type="text">
           </div>
         </div>
         <p class="range-field">
-          <input type="range" id="sizeRequired" min="0" max="100" />
+          <input type="range" id="sizeRequired" name="sizeRequired" min="0" max="100" />
           <label for="sizeRequired">Size required</label>
         </p>
         <p class="range-field">
-          <input type="range" id="bidWindow" min="0" max="100" />
+          <input type="range" id="bidWindow" name="bidWindow" min="0" max="100" />
           <label for="bidWindow">Bid window</label>
         </p>
+        <button type="submit" class="btn">Submit</button>
       </form>
     </div>
   </div>
