--- a/www/kerbit/imports/ui/pages/requestPickup.html
+++ b/www/kerbit/imports/ui/pages/requestPickup.html
@@ -8,7 +8,7 @@
   <div class="row">
     <div class="col s6">
       <h1 class="center-align" id="mapSection">Map</h1>
-      <input id="pac" class="controls" type="text" placeholder="Pick up Location" hidden>
+      <input id="pac-input" class="controls" type="text" placeholder="Pick up Location" hidden>
       <div id="map-container">
         {{> map}}
       </div>
