--- a/www/kerbit/imports/ui/pages/requestPickup.html
+++ b/www/kerbit/imports/ui/pages/requestPickup.html
@@ -10,7 +10,8 @@
     <div class="row">
       <div class="col-md-6">
         <p class="h1 text-center">Map</p>
-        <input id="pac-input" class="controls" type="text" placeholder="Pick up Location" hidden>
+        <input id="search" class="controls pac-input" type="text" placeholder="Pick up Location" hidden>
+        <button id="last-loc" class="controls map-button " hidden> Last Request Location </button>
         <div id="map-container" class="request-pickup">
           {{> map}}
         </div>
@@ -19,7 +20,7 @@
         <p class="h1 text-center">Address</p>
         <form class="form-horizontal">
           <div class="form-group">
-            <label for="description" class="col-md-2 control-label">Description</label>
+            <label for="description" class="cwol-md-2 control-label">Description</label>
             <div class="col-md-10">
               <textarea class="form-control" id="description" placeholder="Description" rows=10></textarea>
             </div>
