--- a/www/kerbit/imports/ui/pages/myRequests.html
+++ b/www/kerbit/imports/ui/pages/myRequests.html
@@ -15,6 +15,7 @@
   <div class="container">
     <div class="row">
       {{#each currentUsersRequests}}
+      <div class="col s6">
         <div class="card">
           {{#each ItemWithId itemId}}
             {{#each ImageWithIds imageIds}}
@@ -48,6 +49,7 @@
             <button type="button" id="delete-request" class="list-group-item list-group-item-danger "><i class="fa fa-trash fa-fw"></i> Delete this request</button>
           </div>
         </div>
+      </div>
       {{/each}}
     </div>
   </div>
