Fix api call for accept offer and rewrite accepted offer view

--- a/www/kerbit/imports/ui/pages/myRequests.html
+++ b/www/kerbit/imports/ui/pages/myRequests.html
@@ -37,7 +37,7 @@
                 <ul class="list-group">
                   {{#each offersWithRequestId _id}}
                     <li class="list-group-item">
-                      Offer: {{price}} <button id="accept-offer" class="btn btn-default btn-success ">Accept Offer</button>
+                      Offer: {{price}} <button type="submit" id="accept-offer" class="btn">Accept Offer</button>
                     </li>
                   {{/each}}
                 </ul>
