--- a/www/kerbit/imports/ui/pages/myOffers.html
+++ b/www/kerbit/imports/ui/pages/myOffers.html
@@ -63,7 +63,37 @@
     </div>
     <div id="accepted" class="col s12">
       <br>
-      HEY
+      {{#each transactions}}
+          <div class="row">
+            <div class="col s12 m7">
+              <div class="card">
+                {{#each ItemWithId itemId}}
+                  <div class="card-image">
+                    {{#each ImageWithIds imageIds}}
+                      <img src="{{url store='images'}}" alt="request image"
+                                                        class="responsive-img">
+                    {{/each}}
+                  </div>
+                  <div class="card-content">
+                    <h5>{{description}}</h5>
+                  </div>
+                  {{/each}}
+                <div class="card-action">
+                  <div class="row" style="margin-top: 50px;">
+                    <div class="col s12">
+                      {{#each offerWithOfferId finalOffer}}
+                      <h5 class="center-align">
+                        Your offer was accepted for {{price}}
+                        <i class="fa fa-gbp"></i>
+                      </h5>
+                      {{/each}}
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+      {{/each}}
     </div>
   </div>
 </template>
