--- a/www/kerbit/imports/ui/pages/myOffers.html
+++ b/www/kerbit/imports/ui/pages/myOffers.html
@@ -14,7 +14,7 @@
     </div>
     <div id="pending" class="col s12">
       <br>
-      {{#each offers}}
+      {{#each pendingOffers}}
         {{#each requests requestId}}
           <div class="row">
             <div class="col s12 m7">
