Add tab to my requests

--- a/www/kerbit/imports/ui/pages/requestPickup.html
+++ b/www/kerbit/imports/ui/pages/requestPickup.html
@@ -41,7 +41,7 @@
           <label for="sizeRequired">Size required</label>
         </p>
         <p class="range-field">
-          <input type="range" id="bidWindow" name="bidWindow" min="1" max="20160" value="10080"/>
+          <input type="range" id="bidWindow" name="bidWindow" min="1" max="336" value="48" step = 1/>
           <label for="bidWindow">Bid window</label>
         </p>
         <button type="submit" class="btn">Submit</button>
