--- a/www/kerbit/imports/ui/pages/userProfilePublicView.html
+++ b/www/kerbit/imports/ui/pages/userProfilePublicView.html
@@ -2,16 +2,14 @@
   {{#if Template.subscriptionsReady}}
     {{#if currentUser }}
       {{#if isAUser}}
-
         {{>ViewUserHelper }}
       {{else}}
-
-        <p>User not found!</p>
-
+        {{>NotFound}}
       {{/if}}
     {{else}}
-      <p> You are not authorized to see this page.</p>
-      <p> Please <a href="/">return to Home</a></p>
+      <h1 class="text-center text-danger"><i class="fa fa-lock fa-fw"></i> Sorry, you cannot access this page.</h1>
+      <hr>
+      <h3 class="text-center">Please <a href="/login">sign in</a> to proceed.</h3>
     {{/if}}
   {{/if}}
 </template>
@@ -19,14 +17,13 @@
 <template name="ViewUserHelper">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-sm-6 col-md-6">
-        <div class="well well-sm">
+      <div class="col s6">
           <div class="row">
-            <div class="col-sm-6 col-md-4">
+            <div class="col s6">
               <img src="http://placehold.it/380x500" alt="" class="img-rounded img-responsive" />
             </div>
-            <div class="col-sm-6 col-md-8">
-              <h4>{{getUsername}}</h4>
+            <div class="col s6">
+              <h4>XDXDXD{{getUsername}}</h4>
               <small><cite title="Driver / Client">Driver / Client
               </cite></small>
               <p>
@@ -34,7 +31,6 @@
               </p>
             </div>
           </div>
-        </div>
       </div>
     </div>
   </div>
