--- a/www/kerbit/imports/ui/pages/myRequests.html
+++ b/www/kerbit/imports/ui/pages/myRequests.html
@@ -5,11 +5,10 @@
 </template>
 
 <template name="MyRequestsHelper">
-  <div class="text-center h1">My requests
-    <div class="btn-group" role="group" aria-label="Basic example">
-      <button class="btn btn-success refresh-requests"><i class="fa fa-refresh fa-fw"></i> Refresh</button>
+  <div class="center-align extra-padding-bottom-15">
+    <h1>My requests</h1>
+      <button id="refresh-requests" class="btn btn-success"><i class="fa fa-refresh fa-fw"></i>Refresh</button>
       <button id="delete-all-requests" class="btn btn-danger "><i class="fa fa-trash fa-fw"></i> Delete all</button>
-    </div>
   </div>
   <hr>
   <div class="container">
